编译模块主机
