# goout/cmdb/cmdb.validator.pb.go
@@ -336,7 +336,7 @@ func (this *ServerListResponse) Validate() error {
 	}
 	return nil
 }
-func (this *SearchMoudleRequest) Validate() error {
+func (this *SearchModuleRequest) Validate() error {
 	if this.CmdbSearchRequest != nil {
 		if err := github_com_mwitkow_go_proto_validators.CallValidatorIfExists(this.CmdbSearchRequest); err != nil {
 			return github_com_mwitkow_go_proto_validators.FieldError("CmdbSearchRequest", err)
@@ -642,5 +642,40 @@ func (this *UpdateVipStateResponse) Validate() error {
 			return github_com_mwitkow_go_proto_validators.FieldError("Status", err)
 		}
 	}
+	return nil
+}
+func (this *SearchModuleListRequest) Validate() error {
+	return nil
+}
+func (this *SearchModuleListResponse) Validate() error {
+	if this.Status != nil {
+		if err := github_com_mwitkow_go_proto_validators.CallValidatorIfExists(this.Status); err != nil {
+			return github_com_mwitkow_go_proto_validators.FieldError("Status", err)
+		}
+	}
+	return nil
+}
+func (this *SearchModuleHostRequest) Validate() error {
+	if this.ModuleName == "" {
+		return github_com_mwitkow_go_proto_validators.FieldError("ModuleName", fmt.Errorf(`模块名不能为空`))
+	}
+	return nil
+}
+func (this *SearchModuleHostResponse) Validate() error {
+	if this.Status != nil {
+		if err := github_com_mwitkow_go_proto_validators.CallValidatorIfExists(this.Status); err != nil {
+			return github_com_mwitkow_go_proto_validators.FieldError("Status", err)
+		}
+	}
+	for _, item := range this.Data {
+		if item != nil {
+			if err := github_com_mwitkow_go_proto_validators.CallValidatorIfExists(item); err != nil {
+				return github_com_mwitkow_go_proto_validators.FieldError("Data", err)
+			}
+		}
+	}
+	return nil
+}
+func (this *ModuleHost) Validate() error {
 	return nil
 }
